stave-macros/tests/fail/methods_sets_requires_same_field.rs
use stave_macros::{builder, methods};

#[builder]
struct Widget {
    #[stave(required)]
    name: String,
}

#[methods]
impl Widget {
    #[sets(name)]
    #[requires(name)]
    fn go(self, value: String) -> String {
        value
    }
}

fn main() {}
